# zero2prod

./: Cargo.toml  deny.toml  justfile
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: health_check.rs
