[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ['util'] }
